# mywebapp

./: .dockerignore  .env.example  .gitignore  .yamllint  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: actionlint.yaml
.github/workflows/: ci.yml
app/: config.py  db.py  deps.py  handlers.py  init_routers.py  lifespan.py  main.py  models.py  negotiation.py  repo.py
app/routes/: health.py  items.py  root.py
app/templates/: _layout.html.j2  index.html.j2  item_detail.html.j2  items_list.html.j2
deploy/: compose.prod.yml  install.sh  runner-bootstrap.sh  target-node-install.sh
deploy/config/: config.dev.toml  config.toml.example
deploy/lib/: 00_preflight.sh  10_packages.sh  20_users.sh  30_postgres.sh  35_pg_hba.sh  40_app_files.sh  50_config.sh  60_migrate.sh  70_systemd.sh  80_nginx.sh  85_sudoers.sh  90_lockout.sh  99_verify.sh
deploy/nginx/: mywebapp.compose.conf  mywebapp.conf
deploy/sudoers/: operator-mywebapp
deploy/systemd/: mywebapp-container.service  mywebapp.service  mywebapp.socket
docs/: api.md  demo-plan.md  dev-setup.md  install-runbook.md  runbook.md
iac/: README.md
iac/ansible/: ansible.cfg  site.yml
iac/ansible/inventory/group_vars/: all.yml  vault.yml.example
iac/ansible/roles/common/handlers/: main.yml
iac/ansible/roles/common/tasks/: main.yml
iac/ansible/roles/db/handlers/: main.yml
iac/ansible/roles/db/tasks/: main.yml
iac/ansible/roles/db/templates/: pg_hba.conf.j2  postgresql.conf.j2
iac/ansible/roles/verify/tasks/: main.yml
iac/ansible/roles/worker/handlers/: main.yml
iac/ansible/roles/worker/tasks/: app.yml  docker.yml  main.yml  nginx.yml  sudoers.yml  users.yml
iac/ansible/roles/worker/templates/: compose.yaml.j2  config.toml.j2  mywebapp.conf.j2  mywebapp.service.j2  operator-mywebapp.j2
iac/terraform/: cloud-init.ansible.yaml.tftpl  example.tfvars  inventory.ini.tftpl  main.tf  outputs.tf  variables.tf  versions.tf
migrations/: 001_init.sql  schema_version.sql
scripts/: dev_run.sh  migrate.sh  smoke.sh  verify-deploy.sh  wait_for_pg.sh
tests/: conftest.py  test_config.py  test_demo_fail.py  test_errors.py  test_health.py  test_items.py  test_negotiation.py  test_root.py
